--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "joi": "^17.13.3",
     "mongoose": "^8.4.0",
     "underscore": "^1.13.6"
   },
