--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "debug": "^4.3.5",
     "express": "^4.19.2",
     "joi": "^17.13.3",
     "mongoose": "^8.4.0",
+    "pug": "^3.0.3",
     "rc": "^1.2.8",
     "underscore": "^1.13.6"
   },
